--- a/clock.html
+++ b/clock.html
@@ -26,8 +26,8 @@
         <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet"> 
     </head>
     <body onload="startTime()">
-        <div style="margin-left: 25%; margin-top: 4%;" class="Blazing">BY AANSH SARDANA</div>
+        <div style="margin-left: 25%; margin-top: 4%; display: block;" class="Blazing">AANSH SARDANA</div>
 <div class="clock" style=" margin-left: 40%; margin-top: 10%; margin-bottom: 5%; "></div>
-<div id="txt" class="text" style="display: block !important; padding-top: 30%;;"></div>
+<div id="txt" class="text" style="display: block !important;"></div>
 </body>
 </html>
