--- a/clock.html
+++ b/clock.html
@@ -26,8 +26,8 @@
         <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet"> 
     </head>
     <body onload="startTime()">
-        <div style="margin-left: 22%; margin-top: 5%;" class="Blazing">AANSH SARDANA</div>
-<div class="clock" style=" margin-left: 40%; margin-top: 12%; margin-bottom: 5%; "></div>
-<div id="txt" class="text" style="display: block !important; margin-top: 40%;"></div>
+        <div style="margin-top: 2%; width: 100%; text-align: center;" class="Blazing">BY AANSH SARDANA</div>
+<div class="clock" style=" margin-top: 8%; "></div>
+<div id="txt" class="text" style=" width: 100%; text-align: center;  "></div>
 </body>
 </html>
